t staRevert "Update data file, add samples posts"
This reverts commit 19a99534b65c318d1bd55483b98746fbbb077535.

--- a/theme-bootstrap-2/data.yml
+++ b/theme-bootstrap-2/data.yml
@@ -1,10 +1,11 @@
-title : Spencer Riner
-tagline: To be decided
+title : Site Title
+tagline: Site Tagline
 author :
-  name : Spencer Riner
-  email : spencerriner@gmail.com
-  github : spencerriner
-  twitter : sriner
+  name : First-name Last-name
+  email : blah@email.test
+  github : username
+  twitter : username
+  feedburner : feedname
 
 navigation :
   - archive
