--- a/_config.yml
+++ b/_config.yml
@@ -3,19 +3,16 @@
 # # # # # # # # # # # # #
 
 # Basic
-name:               "Kiko Plus"
+name:               "Spencer Riner"
 
 
 
 author:
-  name:             your-name
-  facebook:         your-id
-  twitter:          your-id
-  github:           your-id
-  linkedin:         your-id
-  medium:           your-id
-  tumblr:           your-id
-  email:            your-id@your-email.com
+  name:             Spencer Riner
+  twitter:          sriner
+  github:           spencerriner
+  linkedin:         spencerriner
+  email:            spencerriner@gmail.com
 
 # Google-analytics
 google-analytics:
@@ -26,13 +23,13 @@ disqus:
   id:               "your-id"
 
 # URL
-#url:                "https://AWEEKJ.github.io" # the base hostname & protocol for your site
-url:                "http://localhost:4000" # use this url when develop
+url:                "https://spencerriner.github.io" # the base hostname & protocol for your site
+#url:                "http://localhost:4000" # use this url when develop
 baseurl:            "" # the subpath of your site, e.g. /blog
 
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:           Asia/Seoul
+timezone:           America/Chicago
 permalink:          /:year-:month-:day/:title/
 
 # Pagination
