--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ google-analytics:
 
 # Disqus
 disqus:
-  id:               "your-id"
+  id:               "scriner"
 
 # URL
 url:                "https://spencerriner.github.io" # the base hostname & protocol for your site
