--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 # # # # # # # # # # # # #
 
 # Basic
-name:               "Spencer Riner"
+name:               "spencer riner"
 
 
 
 author:
   name:             Spencer Riner
-  twitter:          sriner
+  twitter:          spencerriner
   github:           spencerriner
   linkedin:         spencerriner
   email:            spencerriner@gmail.com
