--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,8 @@ author:
   github:           spencerriner
   linkedin:         spencerriner
   email:            spencerriner@gmail.com
+  bandcamp:	    fredmanfredd
+  soundcloud:	    fredmanfredd
 
 # Google-analytics
 google-analytics:
