Update config file - navbar

--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,8 @@ nav:
     url:            "/tags"
   - name:           "Github"
     url:            "https://github.com/spencerriner"
+  - name:	    "Bandcamp"
+    url:	    "https://fredmanfredd.bandcamp.com"
 
 
 
