--- a/_config.yml
+++ b/_config.yml
@@ -1,86 +1,33 @@
-# # # # # # # # # # # # #
-#   K i k o - p l u s   #
-# # # # # # # # # # # # #
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
 
-# Basic
-name:               "spencer riner"
+# Site settings
+title: spencer riner
+email: spencerriner@gmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  I am a Linux system administrator at the Johnson Space Center. I like all things 
+  tech, playing and recording music in my bedroom studio, and learning new things.
+baseurl: "/jekyll-simple" # the subpath of your site, e.g. /blog
+url: "http://spencerriner.github.io" # the base hostname & protocol for your site
+twitter_username: spencerriner 
+github_username:  spencerriner
 
-
-
-author:
-  name:             Spencer Riner
-  twitter:          spencerriner
-  github:           spencerriner
-  linkedin:         spencerriner
-  email:            spencerriner@gmail.com
-  bandcamp:	    fredmanfredd
-  soundcloud:	    fredmanfredd
-
-# Google-analytics
-google-analytics:
-  id:               ""
-
-# Disqus
-disqus:
-  id:               "spencerriner-github-io"
-
-# URL
-url:                "https://spencerriner.github.io" # the base hostname & protocol for your site
-#url:                "http://localhost:4000" # use this url when develop
-baseurl:            "" # the subpath of your site, e.g. /blog
-
-
-# http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:           America/Chicago
-permalink:          /:year-:month-:day/:title/
-
-# Pagination
-paginate:           5
-paginate_path:      /page:num/
-
-# Markdown
-markdown:           kramdown
+# Build settings
+markdown: kramdown
 kramdown:
-  input:            GFM
+  input: GFM
 
-# Navigation
-nav:
-  - name:           "About"
-    url:            "/about"
-  - name:           "Archive"
-    url:            "/archive"
-  - name:           "Tags"
-    url:            "/tags"
-  - name:           "Github"
-    url:            "https://github.com/spencerriner"
-  - name:	    "Bandcamp"
-    url:	    "https://fredmanfredd.bandcamp.com"
+# Third-party services
+# just leave someone empty to disable it
+# google_analytics: 
+disqus_shortname:
 
+# used this for post_excerpt at index_page
+excerpt_separator: <!--description-->
+paginate: 7
 
-
-# Sass
-sass:
-  sass_dir:         _sass
-  style:            :compressed
-
-# Scopes
-defaults:
-  -
-    scope:
-      path:         ""
-      type:         "pages"
-    values:
-      layout:       "page"
-  -
-    scope:
-      path:         ""
-      type:         "posts"
-    values:
-      layout:       "post"
-
-# jekyll-seo-tag, see: http://www.rubydoc.info/gems/jekyll-seo-tag/1.2.0
-gems:
-  - jekyll-seo-tag
-  - jekyll-paginate
-
-exclude:            [vendor]
+plugins: [jekyll-paginate]
